Lab/Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI
    8       | Specifier error

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag

   15 OptTag: ID
   16       | %empty

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB
   20       | VarDec LB error RB

   21 FunDec: ID LP VarList RP
   22       | ID LP RP
   23       | error RP
   24       | ID LP error

   25 VarList: ParamDec COMMA VarList
   26        | ParamDec

   27 ParamDec: Specifier VarDec

   28 CompSt: LC DefList StmtList RC

   29 StmtList: Stmt StmtList
   30         | %empty

   31 Stmt: Exp SEMI
   32     | CompSt
   33     | RETURN Exp SEMI
   34     | IF LP Exp RP Stmt
   35     | IF LP Exp RP Stmt ELSE Stmt
   36     | WHILE LP Exp RP Stmt
   37     | error SEMI
   38     | error

   39 DefList: Def DefList
   40        | %empty

   41 Def: Specifier DecList SEMI
   42    | Specifier error SEMI
   43    | Specifier DecList error

   44 DecList: Dec
   45        | Dec COMMA DecList

   46 Dec: VarDec
   47    | VarDec ASSIGNOP Exp

   48 Exp: Exp ASSIGNOP Exp
   49    | Exp AND Exp
   50    | Exp OR Exp
   51    | Exp RELOP Exp
   52    | Exp PLUS Exp
   53    | Exp MINUS Exp
   54    | Exp STAR Exp
   55    | Exp DIV Exp
   56    | LP Exp RP
   57    | MINUS Exp
   58    | NOT Exp
   59    | ID LP Args RP
   60    | ID LP RP
   61    | Exp LB Exp RB
   62    | Exp DOT ID
   63    | ID
   64    | INT
   65    | FLOAT

   66 Args: Exp COMMA Args
   67     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 8 20 23 24 37 38 42 43
LOWER_THAN_ELSE (258)
ELSE (259) 35
TYPE (260) 11
STRUCT (261) 13 14
ID (262) 15 17 18 21 22 24 59 60 62 63
LC (263) 13 28
RC (264) 13 28
INT (265) 19 64
FLOAT (266) 65
RETURN (267) 33
IF (268) 34 35
WHILE (269) 36
COMMA (270) 10 25 45 66
ASSIGNOP (271) 47 48
OR (272) 50
AND (273) 49
RELOP (274) 51
PLUS (275) 52
MINUS (276) 53 57
STAR (277) 54
DIV (278) 55
UMINUS (279)
NOT (280) 58
LP (281) 21 22 24 34 35 36 56 59 60
RP (282) 21 22 23 34 35 36 56 59 60
LB (283) 19 20 61
RB (284) 19 20 61
DOT (285) 62
SEMI (286) 4 5 7 31 33 37 41 42


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
Program (33)
    on left: 1, on right: 0
ExtDefList (34)
    on left: 2 3, on right: 1 2
ExtDef (35)
    on left: 4 5 6 7 8, on right: 2
ExtDecList (36)
    on left: 9 10, on right: 4 10
Specifier (37)
    on left: 11 12, on right: 4 5 6 8 27 41 42 43
StructSpecifier (38)
    on left: 13 14, on right: 12
OptTag (39)
    on left: 15 16, on right: 13
Tag (40)
    on left: 17, on right: 14
VarDec (41)
    on left: 18 19 20, on right: 9 10 19 20 27 46 47
FunDec (42)
    on left: 21 22 23 24, on right: 6
VarList (43)
    on left: 25 26, on right: 21 25
ParamDec (44)
    on left: 27, on right: 25 26
CompSt (45)
    on left: 28, on right: 6 32
StmtList (46)
    on left: 29 30, on right: 28 29
Stmt (47)
    on left: 31 32 33 34 35 36 37 38, on right: 29 34 35 36
DefList (48)
    on left: 39 40, on right: 13 28 39
Def (49)
    on left: 41 42 43, on right: 39
DecList (50)
    on left: 44 45, on right: 41 43 45
Dec (51)
    on left: 46 47, on right: 44 45
Exp (52)
    on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65,
    on right: 31 33 34 35 36 47 48 49 50 51 52 53 54 55 56 57 58 61
    62 66 67
Args (53)
    on left: 66 67, on right: 59 66


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 3

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 16 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    8       | Specifier . error

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 9

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 10

   15 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


State 11

   13 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 21


State 12

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

    8 ExtDef: Specifier error .
   23 FunDec: error . RP

    RP  shift, and go to state 22

    $default  reduce using rule 8 (ExtDef)


State 16

   18 VarDec: ID .
   21 FunDec: ID . LP VarList RP
   22       | ID . LP RP
   24       | ID . LP error

    LP  shift, and go to state 23

    $default  reduce using rule 18 (VarDec)


State 17

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


State 19

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB

    COMMA  shift, and go to state 25
    LB     shift, and go to state 26

    $default  reduce using rule 9 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 27

    CompSt  go to state 28


State 21

   13 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 40 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 8
    DefList          go to state 30
    Def              go to state 31


State 22

   23 FunDec: error RP .

    $default  reduce using rule 23 (FunDec)


State 23

   21 FunDec: ID LP . VarList RP
   22       | ID LP . RP
   24       | ID LP . error

    error   shift, and go to state 32
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    RP      shift, and go to state 33

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 35
    ParamDec         go to state 36


State 24

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 25

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 37

    ExtDecList  go to state 38
    VarDec      go to state 19


State 26

   19 VarDec: VarDec LB . INT RB
   20       | VarDec LB . error RB

    error  shift, and go to state 39
    INT    shift, and go to state 40


State 27

   28 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 40 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 8
    DefList          go to state 41
    Def              go to state 31


State 28

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 29

   41 Def: Specifier . DecList SEMI
   42    | Specifier . error SEMI
   43    | Specifier . DecList error

    error  shift, and go to state 42
    ID     shift, and go to state 37

    VarDec   go to state 43
    DecList  go to state 44
    Dec      go to state 45


State 30

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 46


State 31

   39 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 40 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 8
    DefList          go to state 47
    Def              go to state 31


State 32

   24 FunDec: ID LP error .

    $default  reduce using rule 24 (FunDec)


State 33

   22 FunDec: ID LP RP .

    $default  reduce using rule 22 (FunDec)


State 34

   27 ParamDec: Specifier . VarDec

    ID  shift, and go to state 37

    VarDec  go to state 48


State 35

   21 FunDec: ID LP VarList . RP

    RP  shift, and go to state 49


State 36

   25 VarList: ParamDec . COMMA VarList
   26        | ParamDec .

    COMMA  shift, and go to state 50

    $default  reduce using rule 26 (VarList)


State 37

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


State 38

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 39

   20 VarDec: VarDec LB error . RB

    RB  shift, and go to state 51


State 40

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 52


State 41

   28 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 53
    ID      shift, and go to state 54
    LC      shift, and go to state 27
    INT     shift, and go to state 55
    FLOAT   shift, and go to state 56
    RETURN  shift, and go to state 57
    IF      shift, and go to state 58
    WHILE   shift, and go to state 59
    MINUS   shift, and go to state 60
    NOT     shift, and go to state 61
    LP      shift, and go to state 62

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 63
    StmtList  go to state 64
    Stmt      go to state 65
    Exp       go to state 66


State 42

   42 Def: Specifier error . SEMI

    SEMI  shift, and go to state 67


State 43

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB
   46 Dec: VarDec .
   47    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 68
    LB        shift, and go to state 26

    $default  reduce using rule 46 (Dec)


State 44

   41 Def: Specifier DecList . SEMI
   43    | Specifier DecList . error

    error  shift, and go to state 69
    SEMI   shift, and go to state 70


State 45

   44 DecList: Dec .
   45        | Dec . COMMA DecList

    COMMA  shift, and go to state 71

    $default  reduce using rule 44 (DecList)


State 46

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 47

   39 DefList: Def DefList .

    $default  reduce using rule 39 (DefList)


State 48

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB
   27 ParamDec: Specifier VarDec .

    LB  shift, and go to state 26

    $default  reduce using rule 27 (ParamDec)


State 49

   21 FunDec: ID LP VarList RP .

    $default  reduce using rule 21 (FunDec)


State 50

   25 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 72
    ParamDec         go to state 36


State 51

   20 VarDec: VarDec LB error RB .

    $default  reduce using rule 20 (VarDec)


State 52

   19 VarDec: VarDec LB INT RB .

    $default  reduce using rule 19 (VarDec)


State 53

   37 Stmt: error . SEMI
   38     | error .

    SEMI  shift, and go to state 73

    $default  reduce using rule 38 (Stmt)


State 54

   59 Exp: ID . LP Args RP
   60    | ID . LP RP
   63    | ID .

    LP  shift, and go to state 74

    $default  reduce using rule 63 (Exp)


State 55

   64 Exp: INT .

    $default  reduce using rule 64 (Exp)


State 56

   65 Exp: FLOAT .

    $default  reduce using rule 65 (Exp)


State 57

   33 Stmt: RETURN . Exp SEMI

    ID     shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 75


State 58

   34 Stmt: IF . LP Exp RP Stmt
   35     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 76


State 59

   36 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 77


State 60

   57 Exp: MINUS . Exp

    ID     shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 78


State 61

   58 Exp: NOT . Exp

    ID     shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 79


State 62

   56 Exp: LP . Exp RP

    ID     shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 80


State 63

   32 Stmt: CompSt .

    $default  reduce using rule 32 (Stmt)


State 64

   28 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 81


State 65

   29 StmtList: Stmt . StmtList

    error   shift, and go to state 53
    ID      shift, and go to state 54
    LC      shift, and go to state 27
    INT     shift, and go to state 55
    FLOAT   shift, and go to state 56
    RETURN  shift, and go to state 57
    IF      shift, and go to state 58
    WHILE   shift, and go to state 59
    MINUS   shift, and go to state 60
    NOT     shift, and go to state 61
    LP      shift, and go to state 62

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 63
    StmtList  go to state 82
    Stmt      go to state 65
    Exp       go to state 66


State 66

   31 Stmt: Exp . SEMI
   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 83
    OR        shift, and go to state 84
    AND       shift, and go to state 85
    RELOP     shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    LB        shift, and go to state 91
    DOT       shift, and go to state 92
    SEMI      shift, and go to state 93


State 67

   42 Def: Specifier error SEMI .

    $default  reduce using rule 42 (Def)


State 68

   47 Dec: VarDec ASSIGNOP . Exp

    ID     shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 94


State 69

   43 Def: Specifier DecList error .

    $default  reduce using rule 43 (Def)


State 70

   41 Def: Specifier DecList SEMI .

    $default  reduce using rule 41 (Def)


State 71

   45 DecList: Dec COMMA . DecList

    ID  shift, and go to state 37

    VarDec   go to state 43
    DecList  go to state 95
    Dec      go to state 45


State 72

   25 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 25 (VarList)


State 73

   37 Stmt: error SEMI .

    $default  reduce using rule 37 (Stmt)


State 74

   59 Exp: ID LP . Args RP
   60    | ID LP . RP

    ID     shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62
    RP     shift, and go to state 96

    Exp   go to state 97
    Args  go to state 98


State 75

   33 Stmt: RETURN Exp . SEMI
   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 83
    OR        shift, and go to state 84
    AND       shift, and go to state 85
    RELOP     shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    LB        shift, and go to state 91
    DOT       shift, and go to state 92
    SEMI      shift, and go to state 99


State 76

   34 Stmt: IF LP . Exp RP Stmt
   35     | IF LP . Exp RP Stmt ELSE Stmt

    ID     shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 100


State 77

   36 Stmt: WHILE LP . Exp RP Stmt

    ID     shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 101


State 78

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   57    | MINUS Exp .
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    LB   shift, and go to state 91
    DOT  shift, and go to state 92

    $default  reduce using rule 57 (Exp)


State 79

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   58    | NOT Exp .
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    LB   shift, and go to state 91
    DOT  shift, and go to state 92

    $default  reduce using rule 58 (Exp)


State 80

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   56    | LP Exp . RP
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 83
    OR        shift, and go to state 84
    AND       shift, and go to state 85
    RELOP     shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    RP        shift, and go to state 102
    LB        shift, and go to state 91
    DOT       shift, and go to state 92


State 81

   28 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 28 (CompSt)


State 82

   29 StmtList: Stmt StmtList .

    $default  reduce using rule 29 (StmtList)


State 83

   48 Exp: Exp ASSIGNOP . Exp

    ID     shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 103


State 84

   50 Exp: Exp OR . Exp

    ID     shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 104


State 85

   49 Exp: Exp AND . Exp

    ID     shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 105


State 86

   51 Exp: Exp RELOP . Exp

    ID     shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 106


State 87

   52 Exp: Exp PLUS . Exp

    ID     shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62
